QPID-8620 - [Broker-J] HTTP management plugin can reveal system data or debug information (#173)